hand hover events more responsibly in containment and applethandle; another patch by ambro

(abro: one more solid patch like this and i'll be hitting you up to get an svn account of your own ;)

BUG:167551

svn path=/trunk/KDE/kdebase/workspace/libs/plasma/; revision=838889